<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.receipo.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_expired"
        android:name="com.example.receipo.ui.expired.ExpiredFragment"
        android:label="@string/menu_expired"
        tools:layout="@layout/fragment_expired" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.example.receipo.ui.stats.StatsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" />
</navigation>